package Base

interface InfoInterface {
    var nome: String?
    var codigo: Int?

    override fun equals(other: Any?): Boolean
}